Solved the EP flag not updating error and ran initial test on Par04.
The EP flags macros were given after SetInferenceLibrary macro so, the input flag values were not being used. Also, ran initial tests on all 4 EPs. Was able to run the model seamlessly on CUDA. Came across errors with TensorRT (graph error) and OpenVINO (pointer error). The DNNL EP api shown in C++ example in docs is not present in ORT C++ docs, don't know whether they are scrapping support for oneDNN or not.

--- a/examples/extended/parameterisations/Par04/examplePar04_onnx.in
+++ b/examples/extended/parameterisations/Par04/examplePar04_onnx.in
@@ -15,6 +15,7 @@
 /Par04/mesh/setNbOfZCells 45
 
 # Initialize
+/run/numberOfThreads 1
 /run/initialize
 
 /gun/energy 10 GeV
@@ -29,7 +30,11 @@
 ## path to the model which is set to download by cmake
 /Par04/inference/setModelPathName MLModels/Generator.onnx
 /Par04/inference/setProfileFlag 1
-/Par04/inference/setOptimizationFlag 0
+/Par04/inference/setOptimizationFlag 1
+/Par04/inference/setDnnlFlag 0
+/Par04/inference/setOpenVinoFlag 0
+/Par04/inference/setCudaFlag 1
+/Par04/inference/setTensorrtFlag 1
 /Par04/inference/setInferenceLibrary ONNX
 ## set mesh size for inference == mesh size of a full sim that
 ## was used for training; it coincides with readout mesh size
