--- a/examples/extended/parameterisations/Par04/Dockerfile_GPU_ort
+++ b/examples/extended/parameterisations/Par04/Dockerfile_GPU_ort
@@ -13,8 +13,6 @@ USER root
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-WORKDIR /workspace
-
 ARG ORT_VERSION=1.11.0
 ARG ORT_REPO=https://github.com/microsoft/onnxruntime.git
 ARG OPENVINO_DEVICE=CPU_FP32 
@@ -109,9 +107,11 @@ RUN cd /opt/par04/src && \
 
 FROM nvcr.io/nvidia/tensorrt:${TRT_CONTAINER_VERSION}-py3 as finalBuild
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update -y && \
     TZ=Etc/UTC apt-get -y install tzdata && \
-    apt-get -y build-essential gcc g++ wget curl git python3-dev python3-numpy python3-setuptools python3-wheel python3-pip
+    apt-get -y install build-essential gcc g++ wget curl git python3-dev python3-numpy python3-setuptools python3-wheel python3-pip
     #apt-get -y install build-essential libtool autoconf unzip wget curl gcc g++ libexpat1-dev software-properties-common git python3-dev python3-numpy python3-setuptools python3-wheel python3-pip aria2
         
 RUN mkdir -p /opt/onnxruntime && \
@@ -130,6 +130,9 @@ RUN echo ". /opt/geant4/install/bin/geant4.sh" >> ~/.bashrc
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/onnxruntime/lib
 
 RUN rm -rf /var/lib/apt/lists/*
+
+RUN cd /opt/onnxruntime/pywheels && \
+	python3 -m pip install ./*.whl 
 
 WORKDIR /opt/par04
 							   #####
