--- a/examples/extended/parameterisations/Par04/CMakeLists.txt
+++ b/examples/extended/parameterisations/Par04/CMakeLists.txt
@@ -45,34 +45,34 @@ endif()
 # ONNX
 if(INFERENCE_LIB)
   find_package(OnnxRuntime QUIET)
-    if(OnnxRuntime_FOUND)
-      message("ONNX Runtime inference library found.")
-      add_definitions(-DUSE_INFERENCE)
-      add_definitions(-DUSE_INFERENCE_ONNX)
-      # Checking oneDNN / DNNL Execution Provider support
-      if(OnnxRuntime_DnnlEp_FOUND)
-        message("DNNL Execution Provider files found.")
-        add_definitions(-DUSE_DNNL)
-      else()
-        message("DNNL Execution Provider files not found.")
-      endif()
-      # Checking OpenVINO Execution Provider support
-      if(OnnxRuntime_OpenVinoEp_FOUND)
-        message("OpenVINO Execution Provider file found.")
-        add_definitions(-DUSE_OPENVINO)
-      else()
-        message("OpenVINO Execution Provider files not found.")
-      endif()
-      # Checking TensorRT Execution Provider support
-      if(OnnxRuntime_TensorrtEp_FOUND)
-        message("TensorRT Execution Provider file found.")
-        add_definitions(-DUSE_TENSORRT)
-      else()
-        message("TensorRT Execution Provider files not found.")
-      endif() 
+  if(OnnxRuntime_FOUND)
+    message("ONNX Runtime inference library found.")
+    add_definitions(-DUSE_INFERENCE)
+    add_definitions(-DUSE_INFERENCE_ONNX)
+    # Checking oneDNN / DNNL Execution Provider support
+    if(OnnxRuntime_DnnlEp_FOUND)
+      message("DNNL Execution Provider files found.")
+      add_definitions(-DUSE_DNNL)
     else()
-      message("ONNX Runtime not found!")
-   endif()
+      message("DNNL Execution Provider files not found.")
+    endif()
+    # Checking OpenVINO Execution Provider support
+    if(OnnxRuntime_OpenVinoEp_FOUND)
+      message("OpenVINO Execution Provider file found.")
+      add_definitions(-DUSE_OPENVINO)
+    else()
+      message("OpenVINO Execution Provider files not found.")
+    endif()
+    # Checking TensorRT Execution Provider support
+    if(OnnxRuntime_TensorrtEp_FOUND)
+      message("TensorRT Execution Provider file found.")
+      add_definitions(-DUSE_TENSORRT)
+    else()
+      message("TensorRT Execution Provider files not found.")
+    endif() 
+  else()
+    message("ONNX Runtime not found!")
+  endif()
 endif()
 
 #----------------------------------------------------------------------------
@@ -99,17 +99,23 @@ endif()
 if(OnnxRuntime_FOUND)
   target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_CXX_INCLUDE})
   target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_C_INCLUDE})
-  if(OnnxRuntime_DnnlEp_FOUND)
-    target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_DNNL_EP_INCLUDE})
-  endif()
-  if(OnnxRuntime_OpenVinoEp_FOUND)
-    target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_OPENVINO_EP_INCLUDE})
-  endif()
-  if(OnnxRuntime_TensorrtEp_FOUND)
-    target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_factory})
-    target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_options})
-  endif()
   target_link_libraries(examplePar04 ${OnnxRuntime_LIBRARY})
+  if(OnnxRuntime_Shared_lib_FOUND)
+    target_link_libraries(examplePar04 ${OnnxRuntime_SHARED_lib})
+    if(OnnxRuntime_DnnlEp_FOUND)
+      target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_DNNL_EP_INCLUDE})
+    #  target_link_libraries(examplePar04 ${OnnxRuntime_DNNL_lib})
+    endif()
+    if(OnnxRuntime_OpenVinoEp_FOUND)
+      target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_OPENVINO_EP_INCLUDE})
+    #  target_link_libraries(examplePar04 ${OnnxRuntime_OPENVINO_lib})
+    endif()
+    if(OnnxRuntime_TensorrtEp_FOUND)
+      target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_factory})
+      target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_options})
+    #  target_link_libraries(examplePar04 ${OnnxRuntime_TENSORRT_lib})
+    endif()
+  endif()
   # Depend on data for runtime
   add_dependencies(examplePar04 examplePar04onnxdata)
 endif()
