--- a/examples/extended/parameterisations/Par04/examplePar04_onnx.in
+++ b/examples/extended/parameterisations/Par04/examplePar04_onnx.in
@@ -28,11 +28,11 @@
 ## size of the condition vector (energy, angle and geometry)  
 /Par04/inference/setSizeConditionVector 4
 ## path to the model which is set to download by cmake
-/Par04/inference/setModelPathName MLModels/Generator.onnx
+/Par04/inference/setModelPathName build/MLModels/Generator.onnx
 /Par04/inference/setProfileFlag 1
 /Par04/inference/setOptimizationFlag 0
 /Par04/inference/setDnnlFlag 0
-/Par04/inference/setOpenVinoFlag 0
+/Par04/inference/setOpenVinoFlag 1
 /Par04/inference/setCudaFlag 0
 /Par04/inference/setTensorrtFlag 0
 /Par04/inference/setInferenceLibrary ONNX
