Added EP option macros to .in file

--- a/examples/extended/parameterisations/Par04/CMakeLists.txt
+++ b/examples/extended/parameterisations/Par04/CMakeLists.txt
@@ -104,16 +104,16 @@ if(OnnxRuntime_FOUND)
     target_link_libraries(examplePar04 ${OnnxRuntime_SHARED_lib})
     if(OnnxRuntime_DnnlEp_FOUND)
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_DNNL_EP_INCLUDE})
-    #  target_link_libraries(examplePar04 ${OnnxRuntime_DNNL_lib})
+      target_link_libraries(examplePar04 ${OnnxRuntime_DNNL_lib})
     endif()
     if(OnnxRuntime_OpenVinoEp_FOUND)
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_OPENVINO_EP_INCLUDE})
-    #  target_link_libraries(examplePar04 ${OnnxRuntime_OPENVINO_lib})
+      target_link_libraries(examplePar04 ${OnnxRuntime_OPENVINO_lib})
     endif()
     if(OnnxRuntime_TensorrtEp_FOUND)
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_factory})
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_options})
-    #  target_link_libraries(examplePar04 ${OnnxRuntime_TENSORRT_lib})
+      target_link_libraries(examplePar04 ${OnnxRuntime_TENSORRT_lib})
     endif()
   endif()
   # Depend on data for runtime
