--- a/examples/extended/parameterisations/Par04/CMakeLists.txt
+++ b/examples/extended/parameterisations/Par04/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_STANDARD 14)
+
 #----------------------------------------------------------------------------
 # Setup the project
 cmake_minimum_required(VERSION 3.16...3.21)
@@ -45,6 +47,7 @@ endif()
 # ONNX
 if(INFERENCE_LIB)
   find_package(OnnxRuntime QUIET)
+  find_package(Cuda QUIET)
   if(OnnxRuntime_FOUND)
     message("ONNX Runtime inference library found.")
     add_definitions(-DUSE_INFERENCE)
@@ -70,6 +73,12 @@ if(INFERENCE_LIB)
     else()
       message("TensorRT Execution Provider files not found.")
     endif() 
+    if(Cuda_FOUND)
+      message("Cuda found")
+      add_definitions(-DUSE_CUDA)
+    else()
+      message("Cuda not found")
+    endif()
   else()
     message("ONNX Runtime not found!")
   endif()
@@ -110,6 +119,11 @@ if(OnnxRuntime_FOUND)
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_OPENVINO_EP_INCLUDE})
       target_link_libraries(examplePar04 ${OnnxRuntime_OPENVINO_lib})
     endif()
+    if(Cuda_FOUND)
+      target_include_directories(examplePar04 PUBLIC ${Cuda_INCLUDE})
+      target_include_directories(examplePar04 PUBLIC ${Cuda_Runtime_INCLUDE})
+      target_link_libraries(examplePar04 ${Cuda_LIB})
+    endif()
     if(OnnxRuntime_TensorrtEp_FOUND)
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_factory})
       target_include_directories(examplePar04 PUBLIC ${OnnxRuntime_TENSORRT_EP_INCLUDE_options})
@@ -118,6 +132,16 @@ if(OnnxRuntime_FOUND)
   endif()
   # Depend on data for runtime
   add_dependencies(examplePar04 examplePar04onnxdata)
+endif()
+
+find_package(Root QUIET)
+if(Root_FOUND)
+  message("CERN ROOT binary found.")
+  target_include_directories(examplePar04 PUBLIC ${Root_INCLUDE})
+  target_link_libraries(examplePar04 ${Root_LIB})
+  add_definitions(-DUSE_ROOT)
+else()
+  message("CERN ROOT binary not found.")
 endif()
 
 #----------------------------------------------------------------------------
